--- a/Px4/Release/makefile
+++ b/Px4/Release/makefile
@@ -22,6 +22,7 @@ RM := rm -rf
 -include TouchGFX/gui/src/receitas_2_screen/subdir.mk
 -include TouchGFX/gui/src/receitas_1_screen/subdir.mk
 -include TouchGFX/gui/src/receitas_1_edit_screen/subdir.mk
+-include TouchGFX/gui/src/receita_temperatura_screen/subdir.mk
 -include TouchGFX/gui/src/receita_confirm_screen/subdir.mk
 -include TouchGFX/gui/src/model/subdir.mk
 -include TouchGFX/gui/src/inicializacao_screen/subdir.mk
@@ -59,6 +60,7 @@ RM := rm -rf
 -include TouchGFX/generated/gui_generated/src/receitas_2_screen/subdir.mk
 -include TouchGFX/generated/gui_generated/src/receitas_1_screen/subdir.mk
 -include TouchGFX/generated/gui_generated/src/receitas_1_edit_screen/subdir.mk
+-include TouchGFX/generated/gui_generated/src/receita_temperatura_screen/subdir.mk
 -include TouchGFX/generated/gui_generated/src/receita_confirm_screen/subdir.mk
 -include TouchGFX/generated/gui_generated/src/inicializacao_screen/subdir.mk
 -include TouchGFX/generated/gui_generated/src/degelo_screen/subdir.mk
