--- a/Px4/TouchGFX/simulator/msvs/Application.vcxproj
+++ b/Px4/TouchGFX/simulator/msvs/Application.vcxproj
@@ -128,6 +128,9 @@
     <ClCompile Include="..\..\gui\src\receita_temperatura_screen\Receita_TemperaturaPresenter.cpp"/>
     <ClCompile Include="..\..\gui\src\receita_temperatura_screen\Receita_TemperaturaView.cpp"/>
     <ClCompile Include="..\..\generated\gui_generated\src\receita_temperatura_screen\Receita_TemperaturaViewBase.cpp"/>
+    <ClCompile Include="..\..\gui\src\tela_preta_screen\TELA_PRETAPresenter.cpp"/>
+    <ClCompile Include="..\..\gui\src\tela_preta_screen\TELA_PRETAView.cpp"/>
+    <ClCompile Include="..\..\generated\gui_generated\src\tela_preta_screen\TELA_PRETAViewBase.cpp"/>
   </ItemGroup>
   <ItemGroup>
     <None Include="$(ApplicationRoot)\assets\texts\texts.xlsx"/>
@@ -385,6 +388,9 @@
     <ClInclude Include="..\..\gui\include\gui\receita_temperatura_screen\Receita_TemperaturaPresenter.hpp"/>
     <ClInclude Include="..\..\gui\include\gui\receita_temperatura_screen\Receita_TemperaturaView.hpp"/>
     <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\receita_temperatura_screen\Receita_TemperaturaViewBase.hpp"/>
+    <ClInclude Include="..\..\gui\include\gui\tela_preta_screen\TELA_PRETAPresenter.hpp"/>
+    <ClInclude Include="..\..\gui\include\gui\tela_preta_screen\TELA_PRETAView.hpp"/>
+    <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\tela_preta_screen\TELA_PRETAViewBase.hpp"/>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="$(ApplicationRoot)\generated\simulator\touchgfx.rc"/>
