--- a/Px4/TouchGFX/simulator/msvs/Application.vcxproj
+++ b/Px4/TouchGFX/simulator/msvs/Application.vcxproj
@@ -425,6 +425,7 @@
     <ClInclude Include="..\..\gui\include\gui\receitas_x_edit_screen\Receitas_X_EDITView.hpp"/>
     <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\receitas_x_edit_screen\Receitas_X_EDITViewBase.hpp"/>
     <ClInclude Include="..\..\gui\include\gui\global\var.hpp"/>
+    <ClInclude Include="..\..\gui\include\gui\modbus_address\Address.hpp"/>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="$(ApplicationRoot)\generated\simulator\touchgfx.rc"/>
